--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <figure class="box">
                 <figcaption class="top">Data Cleaning in Excel</figcaption>
-                <a href="https://github.com/vcaos/DataAnalysisProjects/blob/main/Excel%20Project.xlsx"><img src="Images/excel.png" alt="da3">
+                <a href="https://github.com/vcaos/DataAnalysisProjects/tree/main/Bike_Sales_Excel_Project"><img src="Images/excel.png" alt="da3">
                 <figcaption>Standardized bike sales data using Excel formulas to ensure readability, and utilizing pivot tables
                     and charts to further visualize insights.
                 </figcaption></a>
