--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <figcaption class="top">Data Cleaning in Excel</figcaption>
                 <a href="https://github.com/vcaos/DataAnalysisProjects/tree/main/Bike_Sales_Excel_Project"><img src="Images/excel.png" alt="da3">
                 <figcaption>Standardized bike sales data using Excel formulas to ensure readability, and utilizing pivot tables
-                    and charts to further visualize insights.
+                    and charts to further visualize insights. Incorporated sliders, cards, bar charts, line graphs, and tables in PowerBI Dashboard.
                 </figcaption></a>
             </figure>
         </div>
