--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <h1>Please feel free to contact me through my email and/or to connect with me on LinkedIn!</h1>
         <h3>EMAIL: viviancao.vcao@gmail.com</h3>
         <h3>SOCIAL: <a href="https://www.linkedin.com/in/vcao">LinkedIn</a></h3>
+        <h3>GITHUB: <a href="https://github.com/vcaos/DataAnalysisProjects">Github</a></h3>
     </div>
 
 </body>
